Events now omit start and stop time, when they are too small (45 minute and smaller events).

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,3 +5,13 @@
 .rbc-allday-cell {
     display: none;
 }
+
+.rbc-event {
+    container-type: size;
+}
+
+@container (max-height: 60px) {
+    .rbc-event .rbc-event-label {
+        display: none;
+    }
+}
